2004-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* autogen.sh:
	* configure.ac:
	  use config.h
	* ui/spyglass.glade:
	* ui/videotest.glade:
	  adding glade files for UI components

2004-08-02  Johan Dahlin  <johan@gnome.org>

	* configure.ac: Require Python 2.3

	* flumotion/server/config.py (FlumotionConfig.parse_component):
	Rework kind and logging, should be much more generic now and allow
	us to extend components much easier. Cleans up a lot aswell!

	* flumotion/server/launcher.py: Kill command line options for
	individual components

	* flumotion/components/file.py: Move out file streamer here.

2004-07-30  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/config.py: More cleaning up, work in progress

	* flumotion/server/launcher.py: Attempting to clean up shutdown,
	slightly better now but far from perfect

	* flumotion/server/registry.py: New file to handle registry
	parsing and management

	* flumotion/server/admin.py
	(AdminPerspective.perspective_shutdown): New method to shutdown
	the reactor

	* bin/flumotion.in: add DATA_DIR

	* flumotion/components/http.py: Move out http streamer from
	streamer.py

	* data/registry/basecomponents.xml: A list of all components
	included in the base flumotion package.

	* conf/complex.xml: ditto

	* conf/videotest-jpeg.xml: xml version of videotest-jpeg.conf,
	unused so far

2004-07-27  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/streamer.py (HTTPStreamingResource.setHeader):
	Rewrite most part of the HTTP server, handles simple
	authentication now, ready for the new authentication framework.
	(HTTPStreamingResource.render): Add simple authentication

	* conf/videotest-jpeg.conf: Overlay an image.

2004-07-23  Johan Dahlin  <johan@gnome.org>

	* flumotion/server/controller.py (Dispatcher.requestAvatar): Clean
	up, clean up imports as well
	* flumotion/server/*: Futher logging cleanups

2004-07-22  Johan Dahlin  <johan@gnome.org>
