@@ -15,7 +15,7 @@ source=overlay
 [http]
 kind=http-streamer
 source=videotest_conv
-port=8800
+port=8801
 logfile=/tmp/videotestsrc_access.log
 
 #[file-dumper]
