@@ -8,7 +8,7 @@ AM_CONFIG_HEADER(config.h)
 AC_SUBST_FILE(AUTHORS)
 AUTHORS=$srcdir/AUTHORS
 
-AC_SUBST(PYGTK_REQ, 2.0.0)
+AC_SUBST(PYGTK_REQ, 2.3.96)
 AC_SUBST(PYGST_REQ, 0.7.91)
 
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
